# HapPhase

./: Cargo.toml  HapPhase.code-workspace  README.md  SMN.bed  SMN_filter.bed  distillbed.py  shellbook.sh
src/: args.rs  bam.rs  hap.rs  main.rs  vcf.rs
