[package]
name = "HapPhase"
version = "0.1.0"
edition = "2021"
authors = ["jiangchen"]
email = ["jiangchen2@genomics.cn/cherryamme@qq.com"]
description = "(2024-12-17) Happhase: used to count haplotypes from bam"

[dependencies]
rust-htslib = "0.49.0"
clap = { version = "4.5.4", features = ["derive"] }
pretty_env_logger = "0.5.0"
log = "0.4.22"
ndarray = "0.16.1"
